--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
+    "styled-components": "^5.3.5",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
