--- a/package.json
+++ b/package.json
@@ -1,31 +1,24 @@
 {
-  "name": "game_review",
-  "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.18.6",
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@rails/actioncable": "^7.0.4",
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@rails/activestorage": "^7.0.4",
     "@rails/ujs": "^7.0.4",
     "@rails/webpacker": "5.4.3",
-    "axios": "^1.1.2",
+    "axios": "^1.2.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "font-awesome": "^4.7.0",
     "prop-types": "^15.8.1",
+    "rails-ujs": "^5.2.8-1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.2",
+    "react-router-dom": "^6.4.3",
     "styled-components": "^5.3.6",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
-  "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^4.11.1"
-  },
-  "engines": {
-    "npm": "8.x",
-    "node": "16.x"
+    "webpack-dev-server": "^3"
   }
 }
